# aoc-2022

./: x2022.cabal
inputs/day03/: day03
libs/: AdventParser.hs  Utils.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs
